--- a/.github/workflows/run-python.yml
+++ b/.github/workflows/run-python.yml
@@ -1,26 +1,36 @@
-name: Run Python Script Every 5 Minutes
+name: run-python
 
-# Triggers: schedule and manual
 on:
   schedule:
-    - cron: "*/5 * * * *"  # every 5 minutes
-  workflow_dispatch:       # allows manual trigger
+    - cron: "*/5 * * * *"
+  workflow_dispatch:
 
 jobs:
-  run-python:
+  run:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout repository
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      # Step 2: Setup Python
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      # Step 3: Run Python script
+      - uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+
+      - name: Install deps
+        run: pip install -r requirements.txt
+
       - name: Run script
         run: python scripts/my_script.py
+
+      - name: Commit Excel
+        run: |
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
+          git add data/results.xlsx
+          git commit -m "Log execution time" || echo "No changes"
+          git push
